# zhenjue_camera

./: Dockerfile  README.md
docs/: README.md  export_md_pdf_mermaid.js  业务消息API_V1.0.md
docs/js_sdk/: demo.html  demo_server.js  package-lock.json  package.json
docs/js_sdk/protocol/: constants.js
install/: local_setup.sh  setup.sh
install/arm_camera_package/include/arm_camera_package/: camera_node_base.hpp  camera_stream_base.hpp  config.hpp  http_camera_controller.hpp  vision_target_solver.hpp
install/arm_camera_package/share/ament_index/resource_index/package_run_dependencies/: arm_camera_package
install/arm_camera_package/share/ament_index/resource_index/parent_prefix_path/: arm_camera_package
install/arm_camera_package/share/arm_camera_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_camera_package/share/arm_camera_package/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  arm_camera_packageConfig.cmake  export_arm_camera_packageExport-noconfig.cmake  export_arm_camera_packageExport.cmake
install/arm_camera_package/share/arm_camera_package/config/: config.yaml
ws_ros2_arm_navs/: .gitignore  zero_copy_fastDDS.xml
ws_ros2_arm_navs/docs/: PLC协议_指令语义化封装清单_V1.0.md  架构设计_V1.0.md  通讯协议规范_V1.0.md
ws_ros2_arm_navs/docs/js_sdk/: README.md  index.js
ws_ros2_arm_navs/docs/js_sdk/protocol/: codec.js  index.js
ws_ros2_arm_navs/src/HesaiLidar_ROS_2.0/config/: config.yaml
ws_ros2_arm_navs/src/arm_camera_package/: CMakeLists.txt  package.xml
ws_ros2_arm_navs/src/arm_camera_package/config/: config.yaml
ws_ros2_arm_navs/src/arm_camera_package/include/arm_camera_package/: camera_node_base.hpp  camera_stream_base.hpp  config.hpp  vision_target_solver.hpp
ws_ros2_arm_navs/src/arm_camera_package/launch/: arm_camera_node.py
ws_ros2_arm_navs/src/arm_camera_package/src/: arm_camera_node.cpp  camera_node_base.cpp  camera_stream_base.cpp  http_camera_controller.cpp  vision_target_solver.cpp
ws_ros2_arm_navs/src/arm_common_package/: CMakeLists.txt  package.xml
ws_ros2_arm_navs/src/arm_common_package/include/arm_common_package/: arm_api.hpp  arm_msg.hpp  config_loader.hpp  msg_base.hpp
ws_ros2_arm_navs/src/arm_control_package/: CMakeLists.txt  HIKVISION_PTZ_CAPABILITIES.md  package.xml
ws_ros2_arm_navs/src/arm_control_package/config/: arm_config.yaml
ws_ros2_arm_navs/src/arm_control_package/include/arm_control_package/: config.hpp  vision_worker.hpp
ws_ros2_arm_navs/src/arm_control_package/include/arm_control_package/base/: control_context.hpp  global.hpp
ws_ros2_arm_navs/src/arm_control_package/include/arm_control_package/net/: websocket_server.hpp
ws_ros2_arm_navs/src/arm_control_package/include/arm_control_package/net/handles/: camera_handle.hpp  control_handle.hpp  lidar_handle.hpp
ws_ros2_arm_navs/src/arm_control_package/include/arm_control_package/services/: api_service.hpp  camera_service.hpp  can_protocol_service.hpp  control_service.hpp  plc_service.hpp
ws_ros2_arm_navs/src/arm_control_package/launch/: arm_control_node.py  socketcan_bridge.py
ws_ros2_arm_navs/src/arm_control_package/src/: arm_control_node.cpp  camera_ptz_test_node.cpp  vision_target_solver.cpp  vision_worker.cpp
ws_ros2_arm_navs/src/arm_control_package/src/services/: api_service.cpp  camera_service.cpp  can_protocol_service.cpp  control_service.cpp  plc_service.cpp
ws_ros2_arm_navs/src/arm_ros_interfaces/: CMakeLists.txt  package.xml
ws_ros2_arm_navs/src/arm_ros_interfaces/msg/: ImageFrame.msg
