<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_camera_package</name>
  <version>0.1.0</version>
  <description>DeepStream Hikvision stream pull and HTTP camera control package for ROS2.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann-json3-dev</depend>
  <depend>yaml-cpp</depend>

  <build_depend>pkg-config</build_depend>
  <build_depend>libcurl4-openssl-dev</build_depend>
  <exec_depend>libcurl4-openssl-dev</exec_depend>

  <build_depend>gstreamer1.0-dev</build_depend>
  <exec_depend>gstreamer1.0-dev</exec_depend>
  <build_depend>gstreamer1.0-plugins-base</build_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-libav</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
